Release 1.2 (in development)
============================

* PR#25: In inheritance diagrams, the first line of the class docstring
  is now the tooltip for the class.

* PR#47: Added :mod:`sphinx.ext.linkcode` extension.

* PR#75: Added ``--follow-links`` option to sphinx-apidoc.

* PR#45: The linkcheck builder now checks ``#anchor``\ s for existence.

* PR#28: Added Hungarian translation.

* PR#35: Added Slovak translation.

* PR#54: Added Norwegian bokmaal translation.

* PR#52: ``special_members`` flag to autodoc now behaves like ``members``.

* #955: Fix i18n transformation.

* Handle duplicate domain indices in texinfo.

* PR#74: Fix some Russian translation.

* PR#97: Fix footnote handling in translated documents.

* Update to jQuery 1.7.1 and Underscore.js 1.3.1.

* #1055: Fix web support with relative path to source directory.

* #1053: The "rightsidebar" and "collapsiblesidebar" HTML theme options now work together.

* #1015: Stop overriding jQuery contains() in the JavaScript.

* #1028: Fix line block output in the text builder.

* #1018: Fix "container" directive handling in the text builder.

* #1012: Update Estonian translation.

* #1010: Make pngmath images transparent by default; IE7+ should handle it.

* #440: Fix coarse timestamp resolution in some filesystem generate wrong outdated file-list.

* #1008: Fix test failures with Python 3.3.

* #1029: Fix intersphinx_mapping values are not stable if mapping have plural key/value set with Python 3.3.

* #920: Rescue PIL packaging issue that allow import Image without PIL namespace. Thanks to Marc Schlaich.

* #1024: Improve Makefile/make.bat error message if Sphinx is not found. Thanks to anatoly techtonik.

* #1037: Fix typos in Polish translation. Thanks to Jakub Wilk.

* #1038: Fix cpp domain parser fails to parse C+11 "static constexpr" declarations. Thanks to Jakub Wilk.
