@@ -1,6 +1,8 @@
 Release 1.2 (in development)
 ============================
 
+* PR#72: #975: Fix gettext does not extract definition terms before docutils 0.10.0
+
 * PR#25: In inheritance diagrams, the first line of the class docstring
   is now the tooltip for the class.
 
